# roaming_snail

./: .gitignore  Dockerfile  README.md
.devcontainer/: devcontainer.json
docker/: entrypoint.sh  run.sh  setup_vcan.sh
docs/: architecture.md
src/snail_bringup/: CMakeLists.txt  package.xml
src/snail_bringup/config/: controllers.yaml  joy_teleop.yaml  snail.yaml
src/snail_bringup/launch/: joy_control.launch.py  keyboard_control.launch.py  sim.launch.py  snail.launch.py
src/snail_description/: CMakeLists.txt  package.xml
src/snail_description/urdf/: snail.gazebo.xacro  snail.ros2_control.xacro  snail.urdf.xacro
src/snail_gz/: CMakeLists.txt  package.xml
src/snail_gz/worlds/: empty.sdf
src/snail_teleop/: package.xml  setup.cfg  setup.py
src/snail_teleop/snail_teleop/: cmd_vel_bridge.py
src/snail_vesc/: CMakeLists.txt  package.xml
src/snail_vesc/snail_vesc/: vesc_node.py  vesc_protocol.py
src/snail_vesc/test/: test_vesc_protocol.py
